changed deployment target

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,3 +4,11 @@ use_frameworks!
 target 'Example' do
     pod 'CocoaMQTT/WebSockets', :path => '../'
 end
+
+post_install do |installer|
+ installer.pods_project.targets.each do |target|
+  target.build_configurations.each do |config|
+   config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+  end
+ end
+end
